corrigindo bug no overflow x

--- a/source/styles/_hero.scss
+++ b/source/styles/_hero.scss
@@ -1,12 +1,17 @@
 @use 'colors';
 
 .hero {
+    width: 100vw;
+    max-width: 100%;
     padding-top: 64px;
     padding-bottom: 100px;
     background-image: url('../images/fundo.png');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     position: relative;
+    overflow: hidden;
 
     .container {      
         position: relative;
